css fix: Display none as screen is too small.

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -28,6 +28,7 @@ table {}
 .half-star { width:24px; height:21px; float:left; display:block; background:url('../images/stars-21.png') no-repeat -24px 0; }
 .star { width:24px; height:21px; float:left; display:block; background:url('../images/stars-21.png') no-repeat -48px 0; }
 
+.tabletView { display:none; }
 
 a.linkNavigation { float:right; color:#FFF !important; font-size:14px; text-decoration:none; } 
 a.restaurantName { color:#FFF!important;  }
@@ -43,7 +44,7 @@ a.restaurantName { color:#FFF!important;  }
 
 @media only screen and (min-width: 750px) {
 	.dataRestaurants { float:left; width:40%; }
-	.tabletView { float:left; width:60%; }
+	.tabletView { display:block; float:left; width:60%; }
 }/*
 
 
